kubernetes/infra/gateway-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    istio.io/dataplane-mode: ambient
